# free-tts-api-demo

./: .gitignore  README.md  pyproject.toml
app/: entry.py
app/api/: __init__.py  edge_tts.py  elevenlabs.py  ttsmaker.py
app/logic/: __init__.py  edgetts.py  elevenlabs.py  ttsmaker.py
app/web/: __init__.py  edge_tts.py  edgetts_logic.py  elevenlabs.py  ttsmaker.py  ttsmaker_logic.py  ui.py  ui_logic.py
demo/: run.py
demo/api_requests/: __init__.py  ttsmaker.py
demo/web/: __init__.py  ui.py  ui_logic.py
